tests/paczka1/fuzzy1/97829168.err
Error in line 2: S687 S395 60,8
Error in line 6: S687 S687 84,9
Error in line 14: yIopN95806 S552 82,11
Error in line 20: Uqnx S552 48,1
Error in line 24: yIopN95806 S552 126,4
Error in line 35: S687 A594 135,8
